--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/downoad.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/download.jpg" alt="" /></span>
 							<h1>20BCS043</h1>
 							<p>CSE</p>
 						</header>
