--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/download.jpg" alt="" /></span>
-							<h1>20BEE039</h1>
-							<p>EEE</p>
+							<h1>20BCS043</h1>
+							<p>CSE</p>
 						</header>
 						<!--
 						<hr />
