--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/download.jpg" alt="" /></span>
-							<h1>20BME039</h1>
-							<p>MECH</p>
+							<h1>20BEC041</h1>
+							<p>ECE</p>
 						</header>
 						<!--
 						<hr />
