--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/download.jpg" alt="" /></span>
-							<h1>20BCE037</h1>
-							<p>CIVIL</p>
+							<h1>20BTT037</h1>
+							<p>TT</p>
 						</header>
 						<!--
 						<hr />
